fixed dark mode

--- a/allin-front-angular/src/app/app.component.scss
+++ b/allin-front-angular/src/app/app.component.scss
@@ -13,6 +13,7 @@
 
 .toolbar {
     --p-toolbar-border-color: transparent;
+    --p-toolbar-border-radius: 0;
     z-index: 5000;
 }
 
